--- a/DATN_MVC/Views/Shared/_Layout.cshtml
+++ b/DATN_MVC/Views/Shared/_Layout.cshtml
@@ -34,27 +34,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Product</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="CartDetails" asp-action="Index">Cart</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Bills" asp-action="Index">Bill</a>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav">
-                        <li class="nav-item ms-auto">
-                            @{
-                                if (User.Identity.IsAuthenticated)
-                                {
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Accounts" asp-action="Logout">Logout</a>
-                                }
-                                else
-                                {
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Accounts" asp-action="Login">Login</a>
-                                }
-                            }
+                            <a class="nav-link text-dark" asp-area="" asp-controller="GioHang" asp-action="Index">GioHang</a>
                         </li>
                     </ul>
                 </div>
