--- a/DATN_MVC/Views/Shared/_Layout.cshtml
+++ b/DATN_MVC/Views/Shared/_Layout.cshtml
@@ -13,13 +13,17 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
 
+    <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="~/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" type="text/css" href="~/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="~/css/auth.css" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="~/css/auth.css" />
 
     <script src="~/js/modernizr.js"></script>
 </head>
@@ -41,9 +45,7 @@
         <symbol xmlns="http://www.w3.org/2000/svg" id="chevron-right" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z" />
         </symbol>
-        <!-- Copy all other symbols from original template -->
     </svg>
-
     <!-- Search Popup -->
     <div class="search-popup">
         <div class="search-popup-container">
@@ -55,33 +57,19 @@
             <h5 class="cat-list-title">Browse Categories</h5>
 
             <ul class="cat-list">
-                <li class="cat-list-item">
-                    <a href="#" title="Mobile Phones">Mobile Phones</a>
-                </li>
-                <li class="cat-list-item">
-                    <a href="#" title="Smart Watches">Smart Watches</a>
-                </li>
-                <li class="cat-list-item">
-                    <a href="#" title="Headphones">Headphones</a>
-                </li>
-                <li class="cat-list-item">
-                    <a href="#" title="Accessories">Accessories</a>
-                </li>
-                <li class="cat-list-item">
-                    <a href="#" title="Monitors">Monitors</a>
-                </li>
-                <li class="cat-list-item">
-                    <a href="#" title="Speakers">Speakers</a>
-                </li>
-                <li class="cat-list-item">
-                    <a href="#" title="Memory Cards">Memory Cards</a>
-                </li>
+                <li class="cat-list-item"><a href="#" title="Mobile Phones">Mobile Phones</a></li>
+                <li class="cat-list-item"><a href="#" title="Smart Watches">Smart Watches</a></li>
+                <li class="cat-list-item"><a href="#" title="Headphones">Headphones</a></li>
+                <li class="cat-list-item"><a href="#" title="Accessories">Accessories</a></li>
+                <li class="cat-list-item"><a href="#" title="Monitors">Monitors</a></li>
+                <li class="cat-list-item"><a href="#" title="Speakers">Speakers</a></li>
+                <li class="cat-list-item"><a href="#" title="Memory Cards">Memory Cards</a></li>
             </ul>
         </div>
     </div>
 
     <!-- Header -->
-    <header id="header" class="site-header header-scrolled position-fixed text-black bg-light">
+    <header id="header" class="site-header fixed-top">
         <nav id="header-nav" class="navbar navbar-expand-lg px-3 mb-3">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-controller="Home" asp-action="Index">
@@ -102,50 +90,34 @@
                     <div class="offcanvas-body">
                         <ul id="navbar" class="navbar-nav text-uppercase justify-content-end align-items-center flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link me-4 active" asp-controller="Home" asp-action="Index">Home</a>
+                                <a class="nav-link me-4 active" asp-controller="Trang chủ" asp-action="Index">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link me-4" href="#company-services">Services</a>
+                                <a class="nav-link me-4" href="#company-services">Dịch vụ</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link me-4" href="#mobile-products">Products</a>
+                                <a class="nav-link me-4" href="#mobile-products">Sản Phẩm</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link me-4" href="#smart-watches">Watches</a>
+                                <a class="nav-link me-4" href="#smart-watches">Chính sách bảo hành</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link me-4" href="#yearly-sale">Sale</a>
+                                <a class="nav-link me-4" href="#yearly-sale">Giảm giá</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link me-4" href="#latest-blog">Blog</a>
+                                <a class="nav-link me-4" href="#latest-blog">Bài viết</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a class="nav-link me-4 dropdown-toggle link-dark" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Pages</a>
                                 <ul class="dropdown-menu">
-                                    <li>
-                                        <a asp-controller="Home" asp-action="About" class="dropdown-item">About</a>
-                                    </li>
-                                    <li>
-                                        <a asp-controller="Blog" asp-action="Index" class="dropdown-item">Blog</a>
-                                    </li>
-                                    <li>
-                                        <a asp-controller="Shop" asp-action="Index" class="dropdown-item">Shop</a>
-                                    </li>
-                                    <li>
-                                        <a asp-controller="Cart" asp-action="Index" class="dropdown-item">Cart</a>
-                                    </li>
-                                    <li>
-                                        <a asp-controller="Checkout" asp-action="Index" class="dropdown-item">Checkout</a>
-                                    </li>
-                                    <li>
-                                        <a asp-controller="Blog" asp-action="SinglePost" class="dropdown-item">Single Post</a>
-                                    </li>
-                                    <li>
-                                        <a asp-controller="Shop" asp-action="SingleProduct" class="dropdown-item">Single Product</a>
-                                    </li>
-                                    <li>
-                                        <a asp-controller="Home" asp-action="Contact" class="dropdown-item">Contact</a>
-                                    </li>
+                                    <li><a asp-controller="Về chúng tôi" asp-action="About" class="dropdown-item">About</a></li>
+                                    <li><a asp-controller="Bài viết" asp-action="Index" class="dropdown-item">Blog</a></li>
+                                    <li><a asp-controller="Cửa hàng" asp-action="Index" class="dropdown-item">Shop</a></li>
+                                    <li><a asp-controller="Giỏ hàng" asp-action="Index" class="dropdown-item">Cart</a></li>
+                                    <li><a asp-controller="Thanh toán" asp-action="Index" class="dropdown-item">Checkout</a></li>
+                                    <li><a asp-controller="Tư vấn" asp-action="SinglePost" class="dropdown-item">Single Post</a></li>
+                                    <li><a asp-controller="Shop" asp-action="SingleProduct" class="dropdown-item">Single Product</a></li>
+                                    <li><a asp-controller="Khác" asp-action="Contact" class="dropdown-item">Contact</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
@@ -209,13 +181,16 @@
             </div>
         </nav>
     </header>
+    <!-- Wrapper cho main content -->
+    <div class="page-wrapper">
+        <!-- Main Content -->
+        <main>
+            @RenderBody()
+        </main>
+    </div>
 
-    <!-- Main Content -->
-    <main>
-        @RenderBody()
-    </main>
     <!-- Footer -->
-    <footer id="footer" class="overflow-hidden">
+    <footer id="footer" class="site-footer overflow-hidden">
         <div class="container">
             <div class="row">
                 <div class="footer-top-area">
@@ -268,21 +243,18 @@
                         <div class="col-lg-2 col-sm-6 pb-3">
                             <div class="footer-menu text-uppercase">
                                 <h5 class="widget-title pb-2">Quick Links</h5>
-                                <ul class="menu-list list-unstyled text-uppercase">
+                                <ul class="menu-list list-unstyled">
                                     <li class="menu-item pb-2">
-                                        <a asp-controller="Home" asp-action="Index">Home</a>
+                                        <a href="#">About</a>
                                     </li>
                                     <li class="menu-item pb-2">
-                                        <a asp-controller="Home" asp-action="About">About</a>
+                                        <a href="#">Shop</a>
                                     </li>
                                     <li class="menu-item pb-2">
-                                        <a asp-controller="Shop" asp-action="Index">Shop</a>
+                                        <a href="#">Blogs</a>
                                     </li>
                                     <li class="menu-item pb-2">
-                                        <a asp-controller="Blog" asp-action="Index">Blogs</a>
-                                    </li>
-                                    <li class="menu-item pb-2">
-                                        <a asp-controller="Home" asp-action="Contact">Contact</a>
+                                        <a href="#">Contact</a>
                                     </li>
                                 </ul>
                             </div>
@@ -312,19 +284,14 @@
                         <div class="col-lg-3 col-sm-6 pb-3">
                             <div class="footer-menu contact-item">
                                 <h5 class="widget-title text-uppercase pb-2">Contact Us</h5>
-                                <p>
-                                    Do you have any queries or suggestions? <a href="mailto:yourinfo@gmail.com">yourinfo@gmail.com</a>
-                                </p>
-                                <p>
-                                    If you need support? Just give us a call. <a href="tel:+551112223344">+55 111 222 333 44</a>
-                                </p>
+                                <p>Do you have any queries or suggestions? <a href="mailto:yourinfo@gmail.com">yourinfo@gmail.com</a></p>
+                                <p>If you need support? Just give us a call. <a href="tel:+551112223344">+55 111 222 333 44</a></p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <hr>
     </footer>
 
     <!-- Footer Bottom -->
@@ -352,14 +319,41 @@
                 </div>
                 <div class="col-md-4 col-sm-6">
                     <div class="copyright">
-                        <p>
-                            © Copyright @DateTime.Now.Year MiniStore. Design by <a href="https://templatesjungle.com/">TemplatesJungle</a>
-                        </p>
+                        <p>© Copyright 2024 MiniStore.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+    <!-- Style inline cho layout -->
+    <style>
+        .page-wrapper {
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            padding-top: 80px;
+        }
+
+        main {
+            flex: 1 0 auto;
+        }
+
+        .site-header {
+            background: white;
+            border-bottom: 1px solid #eee;
+            z-index: 1030;
+        }
+
+        body {
+            overflow-x: hidden;
+        }
+
+        .site-footer {
+            margin-top: auto;
+            z-index: 1020;
+        }
+    </style>
 
     <!-- Scripts -->
     <script src="~/js/jquery-1.11.0.min.js"></script>
