--- a/DATN_MVC/Areas/Admin/Views/PhanQuyen/Edit.cshtml
+++ b/DATN_MVC/Areas/Admin/Views/PhanQuyen/Edit.cshtml
@@ -24,6 +24,16 @@
 
 <section class="content">
     <div class="container-fluid">
+        <!-- Notifications -->
+        @if (TempData["error"] != null)
+        {
+            <div class="alert alert-danger alert-dismissible">
+                <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+                <h5><i class="icon fas fa-ban"></i> Error!</h5>
+                @TempData["error"]
+            </div>
+        }
+
         <div class="row">
             <div class="col-md-6">
                 <div class="card card-warning">
@@ -41,11 +51,11 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <button type="submit" class="btn btn-primary">
-                                <i class="fas fa-save"></i> Save
+                            <button type="submit" class="btn btn-warning">
+                                <i class="fas fa-save"></i> Update
                             </button>
-                            <a asp-action="Index" class="btn btn-default float-right">
-                                <i class="fas fa-arrow-left"></i> Back
+                            <a asp-action="Index" class="btn btn-secondary float-right">
+                                <i class="fas fa-arrow-left"></i> Back to List
                             </a>
                         </div>
                     </form>
